working on making it look like the wire frame

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -194,8 +194,7 @@
                 <div class="bar" style="width: 20%;"></div>
             </div>
             <h2>Additional Notes:</h2>
-            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any ri
-                ght to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"</p>
+            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings "</p>
             </div>
         </div>
         <!-- Main hero unit for a primary marketing message or call to action -->
@@ -203,9 +202,9 @@
             <div style="background-color: beige">
             <div class="row">
                 <p>
-                    <a href="#" class="btn  btn-small">Overview &raquo;</a>
-                    <a href="#" class="btn  btn-small">Print &raquo;</a>
-                    <a href="#" class="btn  btn-small">Edit &raquo;</a>
+                    <button href="#" class="btn  btn-small">Overview &raquo;</button>
+                    <button href="#" class="btn  btn-small">Print &raquo;</button>
+                    <button href="#" class="btn  btn-small">Edit &raquo;</button>
                 </p>
                 <div class="btn-group" data-toggle="buttons-checkbox">
                     <button type="button" id="ViewInstructor" class="btn"><span class="ui-button-text">View Instructor</span> </button>
@@ -216,16 +215,16 @@
                 <button  class="btn"></button>
             </div>
 
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p></p>
+                <h1>Hello, world!</h1>
+                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                <p></p>
             </div>
+
+            <div style="background-color: lightgray;">
+
             <div class="row">
                 <h3 class="schedule" style="text-align:center;" > 2012 - 2013 </h3>
-
-
             </div>
-
                 <div class="span9">
                     <table class="table">
                         <thead>
@@ -269,73 +268,54 @@
                                         <div class="classHeader">CMPE 16 <span class="classUnits badge badge-success">5</span><br></div>
                                         <div class="classInstructor">T. Larabee<br></div>
                                         <div class="classTime">MWF 9:30-10:40am<br></div>
-
                                     </li>
                                 </ul>
-
-
-
                             </td>
                             <td>
 {#                                <ul id="sortable2" class="connectedSortable">#}
 {#                                <li class="ui-state-highlight" style>HCI 131</li>#}
 {#                                <li class="ui-state-highlight">CMPS101</li>#}
 {#                                <li class="ui-state-highlight">Math 21</li>#}
-
                                     <ul id="sortable2" class="connectedSortable">
                                         <li class="ui-state-highlight">
                                             <div class="classHeader">HCI 131 <span class="classUnits badge badge-success">1</span><br></div>
                                             <div class="classInstructor">Instructor Name<br></div>
                                             <div class="classTime">MWF 12-2pm<br></div>
-
                                         </li>
-
                                         <li class="ui-state-default">
                                             <div class="classHeader">CMPS 101 <span class="classUnits badge badge-success">5</span><br></div>
                                             <div class="classInstructor">M. Warmuth<br></div>
                                             <div class="classTime">T/TH 5-6:45pm<br></div>
-
                                         </li>
                                         <li class="ui-state-default">
                                             <div class="classHeader">Math 21 <span class="classUnits badge badge-success">5</span> </div>
                                             <div class="classInstructor">W. Mackey<br></div>
                                             <div class="classTime">TBA<br></div>
-
                                         </li>
-
 {#                                    </ul>#}
                             </ul>
                             </td>
                             <td>
-
                                     <ul id="sortable3" class="connectedSortable">
-
-
                                         <li class="ui-state-default">
                                             <div class="classHeader">PHYSC 5C <span class="classUnits badge badge-success">5</span><br></div>
                                             <div class="classInstructor">Namme<br></div>
                                             <div class="classTime">T/TH 5-6:45pm<br></div>
-
                                         </li>
-
                                         <li class="ui-state-highlight">
                                             <div class="classHeader">DANM 250C<span class="classUnits badge badge-success">5</span><br></div>
                                             <div class="classInstructor">J. Parker<br></div>
                                             <div class="classTime">TBA<br></div>
                                         </li>
-
                                         <li class="ui-state-default">
                                             <div class="classHeader">PHYSC 5L <span class="classUnits badge badge-success">1</span><br></div>
                                             <div class="classInstructor">Lab Instructor Namme<br></div>
                                             <div class="classTime">TH 8:00am-6:45pm<br></div>
-
                                         </li>
-
                                         <li class="ui-state-default">
                                             <div class="classHeader">AMS <span class="classUnits badge badge-success">5</span> </div>
                                             <div class="classInstructor">MeowNelson<br></div>
                                             <div class="classTime">MWF 12:00-1:40pm<br></div>
-
                                         </li>
                             </ul>
                             </td>
@@ -347,63 +327,16 @@
                                 </ul>
                             </td>
                         </tr>
-
-
-
-
                         </tbody>
                     </table>
-
-
-
-                    <div class="column">
-
-                        <div class="portlet">
-                            <div class="portlet-header">Feeds</div>
-                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-                        </div>
-
-                        <div class="portlet">
-                            <div class="portlet-header">News</div>
-                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-                        </div>
-
                     </div>
-
-                    <div class="column">
-
-                        <div class="portlet">
-                            <div class="portlet-header">Shopping</div>
-                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-                        </div>
-
-                    </div>
-
-                    <div class="column">
-
-                        <div class="portlet">
-                            <div class="portlet-header">Links</div>
-                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-                        </div>
-
-                        <div class="portlet">
-                            <div class="portlet-header">Images</div>
-                            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-                        </div>
-
-                    </div>
-
-
                 </div>
         </div>
     </div>
-
     <hr>
-
     <footer>
         <p>&copy; Company 2013</p>
     </footer>
-
 </div> <!-- /container -->
 
 <!-- Le javascript
