working on making it look like the wire frame

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -187,46 +187,38 @@
     <div class="row">
         <div class="span3">
             <div style="background-color: beige">
-            <h2>News + Info</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus a cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <h2>Major Progress</h2>
-            <div class="progress progress-striped">
-                <div class="bar" style="width: 20%;"></div>
-            </div>
-            <h2>Additional Notes:</h2>
-            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings "</p>
+                <h2>News + Info</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus a cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <h2>Major Progress</h2>
+                <div class="progress progress-striped">
+                    <div class="bar" style="width: 20%;"></div>
+                </div>
+                <h2>Additional Notes:</h2>
+                <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings "</p>
             </div>
         </div>
         <!-- Main hero unit for a primary marketing message or call to action -->
         <div class="span9">
             <div style="background-color: beige">
-            <div class="row">
-                <p>
-                    <button href="#" class="btn  btn-small">Overview &raquo;</button>
-                    <button href="#" class="btn  btn-small">Print &raquo;</button>
-                    <button href="#" class="btn  btn-small">Edit &raquo;</button>
-                </p>
-                <div class="btn-group" data-toggle="buttons-checkbox">
-                    <button type="button" id="ViewInstructor" class="btn"><span class="ui-button-text">View Instructor</span> </button>
-                    <button type="button" id="ViewTime" class="btn"><span class="ui-button-text">View Time</span> </button>
-                    <button type="button" id="ViewUnits" class="btn"><span class="ui-button-text">View Units</span> </button>
+                <div class="row">
+                    <p>
+                        <button href="#" class="btn  btn-small">Overview &raquo;</button>
+                        <button href="#" class="btn  btn-small">Print &raquo;</button>
+                        <button href="#" class="btn  btn-small">Edit &raquo;</button>
+                    </p>
+                    <div class="btn-group" data-toggle="buttons-checkbox">
+                        <button type="button" id="ViewInstructor" class="btn"><span class="ui-button-text">View Instructor</span> </button>
+                        <button type="button" id="ViewTime" class="btn"><span class="ui-button-text">View Time</span> </button>
+                        <button type="button" id="ViewUnits" class="btn"><span class="ui-button-text">View Units</span> </button>
 
+                    </div>
+                    <button  class="btn"></button>
                 </div>
-                <button  class="btn"></button>
-            </div>
-
-                <h1>Hello, world!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p></p>
-            </div>
-
-            <div style="background-color: lightgray;">
-
-            <div class="row">
-                <h3 class="schedule" style="text-align:center;" > 2012 - 2013 </h3>
-            </div>
-                <div class="span9">
-                    <table class="table">
+                <div class="row">
+                    <h3 class="schedule" style="text-align:center;" > 2012 - 2013 </h3>
+                </div>
+                <div class="">
+                    <table class="table table-boredered">
                         <thead>
                         <tr>
                             <th>Fall</th>
@@ -329,8 +321,8 @@
                         </tr>
                         </tbody>
                     </table>
-                    </div>
                 </div>
+            </div>
         </div>
     </div>
     <hr>
