working on making it look like the wire frame

--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -194,25 +194,24 @@
                     <div class="bar" style="width: 20%;"></div>
                 </div>
                 <h2>Additional Notes:</h2>
-                <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings "</p>
+                <p>"But I must explain to you ..."</p>
             </div>
         </div>
         <!-- Main hero unit for a primary marketing message or call to action -->
         <div class="span9">
             <div style="background-color: beige">
-                <div class="row">
-                    <p>
-                        <button href="#" class="btn  btn-small">Overview &raquo;</button>
-                        <button href="#" class="btn  btn-small">Print &raquo;</button>
-                        <button href="#" class="btn  btn-small">Edit &raquo;</button>
-                    </p>
+                <div class="row offset1">
+
+                    <div class="btn-group">
+                        <button href="#" class="btn  btn-small"><span class="ui-button-text">Overview &raquo;</span></button>
+                        <button href="#" class="btn  btn-small"><span class="ui-button-text">Print &raquo;</span></button>
+                        <button href="#" class="btn  btn-small"><span class="ui-button-text">Edit &raquo;</span></button>
+                    </div>
                     <div class="btn-group" data-toggle="buttons-checkbox">
                         <button type="button" id="ViewInstructor" class="btn"><span class="ui-button-text">View Instructor</span> </button>
                         <button type="button" id="ViewTime" class="btn"><span class="ui-button-text">View Time</span> </button>
                         <button type="button" id="ViewUnits" class="btn"><span class="ui-button-text">View Units</span> </button>
-
                     </div>
-                    <button  class="btn"></button>
                 </div>
                 <div class="row">
                     <h3 class="schedule" style="text-align:center;" > 2012 - 2013 </h3>
@@ -320,6 +319,14 @@
                             </td>
                         </tr>
                         </tbody>
+                        <tfoot>
+                            <tr>
+                                <th><i class="icon-plus-sign"></i>&nbsp;Add Course</th>
+                                <th><i class="icon-plus-sign"></i>&nbsp;Add Course</th>
+                                <th><i class="icon-plus-sign"></i>&nbsp;Add Course</th>
+                                <th><i class="icon-plus-sign"></i>&nbsp;Add Course</th>
+                            </tr>
+                        </tfoot>
                     </table>
                 </div>
             </div>
