--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -15,6 +15,7 @@
 -->
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="/static/css/bootstrap.css" rel="stylesheet">
 
@@ -100,14 +101,6 @@
 
     </style>
 
-
-{#    <script src="/static/js/jquery.js"></script>#}
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="/static/js/html5shiv.js"></script>
-    <![endif]-->
-
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
@@ -182,6 +175,8 @@
     </div>
 </div>
 
+
+
 <div class="container">
 
     <div class="row">
@@ -194,7 +189,7 @@
                     <div class="bar" style="width: 20%;"></div>
                 </div>
                 <h2>Additional Notes:</h2>
-                <p>"But I must explain to you ..."</p>
+                <p>"But I must explain to you ..."Launch demo modal</a></p>
             </div>
         </div>
         <!-- Main hero unit for a primary marketing message or call to action -->
@@ -216,6 +211,7 @@
                 <div class="row">
                     <h3 class="schedule" style="text-align:center;" > 2012 - 2013 </h3>
                 </div>
+
                 <div class="">
                     <table class="table table-boredered">
                         <thead>
@@ -335,24 +331,10 @@
     <hr>
     <footer>
         <p>&copy; Company 2013</p>
+
     </footer>
 </div> <!-- /container -->
 
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-{#<script src="/static/js/bootstrap-transition.js"></script>#}
-{#<script src="/static/js/bootstrap-alert.js"></script>#}
-{#<script src="/static/js/bootstrap-modal.js"></script>#}
-{#<script src="/static/js/bootstrap-dropdown.js"></script>#}
-{#<script src="/static/js/bootstrap-scrollspy.js"></script>#}
-{#<script src="/static/js/bootstrap-tab.js"></script>#}
-{#<script src="/static/js/bootstrap-tooltip.js"></script>#}
-{#<script src="/static/js/bootstrap-popover.js"></script>#}
-{#<script src="/static/js/bootstrap-button.js"></script>#}
-{#<script src="/static/js/bootstrap-collapse.js"></script>#}
-{#<script src="/static/js/bootstrap-carousel.js"></script>#}
-{#<script src="/static/js/bootstrap-typeahead.js"></script>#}
 
 </body>
 </html>
