Fixed links on the home page, updated main.py to handle about+contact

--- a/UCSC_Course_Planner/templates/404.html
+++ b/UCSC_Course_Planner/templates/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Sign in &middot; Twitter Bootstrap</title>
+    <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -81,12 +81,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="/">Project name</a>
+            <a class="brand" href="/">UCSC Planner</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="">Home</a></li>
-                    <li><a href="about">About</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/About">About</a></li>
+                    <li><a href="/Contact">Contact</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -105,7 +105,7 @@
         <p> {{ name }}</p>
         <p>{{  greeting|safe }}</p>
 
-        <p class="lead">We can't find what you're looking for so all links will lead you there? <br> Sorry about that. Weird Stuff. We are new to this and hope to figure it all out soon.</p>
+        <p class="lead">We can't find what you're looking for.<br> Sorry about that.</p>
         </div >
 
         <img src="/static/img/django{{ dognum }}.JPG" style="zoom: 20%;" class="img-circle">
