--- a/UCSC_Course_Planner/templates/about.html
+++ b/UCSC_Course_Planner/templates/about.html
@@ -41,11 +41,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">Project name</a>
+            <a class="brand" href="/">UCSC Planner</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/About">About</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li class="active"><a href="/About">About</a></li>
                     <li><a href="/Contact">Contact</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
